--- a/config/boards/shields/tiny20/tiny20.zmk.yml
+++ b/config/boards/shields/tiny20/tiny20.zmk.yml
@@ -3,7 +3,7 @@ id: tiny20
 name: tiny20
 type: shield
 url: https://github.com/enzocoralc/Tiny20/
-requires: [seeeduino_xiao_ble]
+requires: [xiao_ble]
 features:
   - keys
 siblings:
