--- a/config/boards/shields/tiny20/tiny20.dtsi
+++ b/config/boards/shields/tiny20/tiny20.dtsi
@@ -28,16 +28,16 @@
 		compatible = "zmk,kscan-gpio-direct";
 		label = "KSCAN";
 		input-gpios =
-			<&xiao_d  10 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>,
-			<&xiao_d  2 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>,
-			<&xiao_d  4 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>,
-			<&xiao_d  6 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>,
-			<&xiao_d  9 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>,
-			<&xiao_d  1 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>,
-			<&xiao_d  3 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>,
-			<&xiao_d  5 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>,
-			<&xiao_d  8 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>,
-			<&xiao_d  7 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
+			<&gpio1  15 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>,
+			<&gpio0  28 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>,
+			<&gpio0  4 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>,
+			<&gpio1  11 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>,
+			<&gpio1  14 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>,
+			<&gpio0  3 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>,
+			<&gpio0  29 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>,
+			<&gpio0  5 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>,
+			<&gpio1  13 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>,
+			<&gpio1  12 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>
 		;
 	};
 
